--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
               Услуги
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#aboutus">
               О нас
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#numbers">
               Преимущества
@@ -97,7 +97,7 @@
           </li>
 
         </ul>
-        <button class="btn" style="background: #f8f9fa;color: #212529;">Войти</button>
+        <button class="btn" style="background: #f8f9fa;color: #212529;">Войти в личный кабинет</button>
       </div>
     </div>
   </nav>
@@ -114,7 +114,7 @@
 
           <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
             <h1 class="display-2 fw-bold mt-5">Ваш Надежный Партнер в Банковских Гарантиях</h1>
-            <p class="lead">Добро пожаловать в мир надежных банковских гарантий Мы специализируемся на предоставлении качественных финансовых гарантий, обеспечивая ваш бизнес надежной защитой в любых финансовых сделках.</p>
+            <p class="lead" style="width: 50%;">Добро пожаловать в мир надежных банковских гарантий Мы специализируемся на предоставлении качественных финансовых гарантий, обеспечивая ваш бизнес надежной защитой в любых финансовых сделках.</p>
             <!-- <a href="#" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5">Get started free</a> -->
           </div>
 
@@ -703,16 +703,16 @@
           <div>
             <img src="./img/logo.png" alt="" width="154" >
           </div>
-          <address class="text-secondary mt-3">
+          <!-- <address class="text-secondary mt-3">
             <strong>Bangara</strong><br>
             ул. Большая Якиманка,<br>
             33/13с1, Москва, 119049<br>
             <abbr title="Phone">Тел:</abbr>
             +7 (999) 999-99-99 
-          </address>
+          </address> -->
         </div>
-        <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <h3 class="h6 mb-3">Company</h3>
+        <div class="col-12 col-lg-6 col-xl-3  p-5">
+          <!-- <h3 class="h6 mb-3">Company</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Lorem ipsum</a>
@@ -726,10 +726,10 @@
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" href="#">Commodo tortor ac</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
-        <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <h3 class="h6 mb-3">Products</h3>
+        <div class="col-12 col-lg-6 col-xl-3  p-5">
+          <!-- <h3 class="h6 mb-3">Products</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Fusce dapibus est</a>
@@ -747,10 +747,10 @@
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" href="#">Magna mollis</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
         <div class="col-12 col-lg-6 col-xl-3 p-5">
-          <h3 class="h6 mb-3">Subpages</h3>
+          <!-- <h3 class="h6 mb-3">Subpages</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" aria-current="page" href="404.html">404 System Page</a>
@@ -758,7 +758,7 @@
               <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">Simple Text Content
                 Page</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
